ignored pyc files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /.pytest_cache
 /.vscode
 /webinar01
+webinar02/__pycache__/test_mypytest.cpython-310-pytest-8.2.2.pyc
+webinar02/__pycache__/mypytest.cpython-310-pytest-8.2.2.pyc
