--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ webinar02/__pycache__/test_drone.cpython-310-pytest-8.2.2.pyc
 webinar02/__pycache__/mypytest.cpython-310-pytest-8.2.2.pyc
 webinar02/__pycache__/test_mypytest.cpython-310-pytest-8.2.2.pyc
 webinar02/__pycache__/test_drone.cpython-310-pytest-8.2.2.pyc
+webinar02/__pycache__/test_drone.cpython-310-pytest-8.2.2.pyc
